--- a/requirements.txt
+++ b/requirements.txt
@@ -33,7 +33,7 @@ six==1.17.0
 tensorboard==2.19.0
 tensorboard-data-server==0.7.2
 tensorflow==2.19.0
-tensorflow-io-gcs-filesystem==0.31.0
+tensorflow-io-gcs-filesystem>=0.32.0
 termcolor==2.5.0
 tqdm==4.67.1
 typing_extensions==4.12.2
