--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,7 @@
-# Ignore virtual environments
 venv/
-env/
 __pycache__/
-
-# Ignore system-specific files
+!artifacts/similarity.pkl
 .DS_Store
-Thumbs.db
-
-# Ignore Python cache and logs
-*.pyc
-*.pyo
-*.log
-
-# Ignore environment variables and sensitive files
 .env
+*.log
 streamlit-secrets.toml
-
-# Ignore large dataset and model files
-*.pkl
-*.h5
-*.csv
-*.xlsx
-artifacts/
-
-# Ignore large media files
-static/demo.mp4
